--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,12 +2,11 @@ doctype html
 html
   head
     title= title
-    script(src='http://code.jquery.com/jquery-1.11.0.min.js')
-    //- script(src = 'https://www.google.com/jsapi')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='http://code.jquery.com/jquery-1.11.0.min.js')
     script(src="/socket.io/socket.io.js")
     script(src="/js/sockets.js")
+    script(src = 'https://www.google.com/jsapi?autoload={modules:[{name:visualization,version:1}]}')
     script(src="/js/analytics.js")
-    script(src="/js/jsapi.js")
   body
     block content
