--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
     script(src='http://code.jquery.com/jquery-1.11.0.min.js')
     script(src="/socket.io/socket.io.js")
     script(src="/js/sockets.js")
