--- a/views/index.jade
+++ b/views/index.jade
@@ -3,5 +3,6 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  div#genderChart
-  div#visualization
+  div#wrap
+    div#genderChart
+    div#visualization
