--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
+    link(href="http://fonts.googleapis.com/css?family=Tangerine")
     script(src='http://code.jquery.com/jquery-1.11.0.min.js')
     script(src="/socket.io/socket.io.js")
     script(src="/js/sockets.js")
