--- a/views/index.jade
+++ b/views/index.jade
@@ -14,4 +14,6 @@ block content
           .col-md-5
             h1 Age and Gender Distribution
             div#visualization
-
+          .col-md-2
+            h1 Race Chart
+            div#raceChart
