--- a/views/index.jade
+++ b/views/index.jade
@@ -6,12 +6,12 @@ block content
     h1=title
   .container-fluid
       .row
-        .col-md-4
-          h1.text-center Gender Ratio
+        .col-md-4.text-center
+          h1 Gender Ratio
           div#genderChart
-        .col-md-4
+        .col-md-4.text-center
           h1 Age and Gender Distribution
           div#visualization
-        .col-md-4
+        .col-md-4.text-center
           h1 Race Chart
           div#raceChart
