--- a/views/index.jade
+++ b/views/index.jade
@@ -13,5 +13,5 @@ block content
           h1 Age and Gender Distribution
           div#visualization
         .col-md-4.text-center
-          h1 Race Chart
+          h1 Ethnicity Distribution
           div#raceChart
