Send latest image over socket

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,9 +2,8 @@ extends layout
 
 block content
   div.overlay
-  .container-title
-    h1=title
   .container-fluid
+      img#latestImg
       .row
         .col-md-4.text-center
           h1 Gender Ratio
