Displays captured faces

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -80,3 +80,12 @@ footer{
     border-top-style: solid;
     border-top-width: 1px;
 }
+
+#faces img {
+    max-width: 300px;
+    margin: 10px;
+}
+
+#latestImg {
+	max-width: 100%;
+}
