--- a/views/index.jade
+++ b/views/index.jade
@@ -4,12 +4,12 @@ block content
   div.overlay
   .container-fluid
       .row
-        .col-md-3
-          h2 "Live" Stream
+        .col-md-4
+          h1 Live Stream
           img#latestImg
-        .col-md-9
+        .col-md-8
           div#faces
-            h2 Captured Faces
+            h1 Captured Faces
       .row
         .col-md-4.text-center
           h1 Gender Ratio
